--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -99,11 +99,11 @@
 #   to = "https://tiktok.com/@aesthetic.direct"
 #   status = 301
 #   force = true
-# [[redirects]]
-#   from = "https://m2w2.whistlegraph.com"
-#   to = "https://aesthetic.computer/wg~m2w2"
-#   status = 200
-#   force = false
+[[redirects]]
+  from = "https://m2w2.whistlegraph.com"
+  to = "https://aesthetic.computer/wg~m2w2"
+  status = 200
+  force = false
 [[redirects]]
   from = "https://sotce.aesthetic.computer"
   to = "https://aesthetic.computer/sotce-blog"
