--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -15,6 +15,8 @@
     "backend/**/*.mjs"
     ]
   external_node_modules = ["got", "mongodb"]
+[functions.print]
+  external_node_modules = ["got"]
 [functions.user]
   included_files = ["backend/**/*.mjs"]
   external_node_modules = ["got", "mongodb"]
@@ -130,6 +132,10 @@
 [[redirects]]
   from = "/icon/*"
   to = "/.netlify/builders/icon"
+  status = 200
+[[redirects]]
+  from = "/api/print/*"
+  to = "/.netlify/functions/print"
   status = 200
 [[redirects]]
   from = "/tts"
