--- a/system/package.json
+++ b/system/package.json
@@ -59,6 +59,7 @@
     "patreon": "^0.4.1",
     "puppeteer": "^20.9.0",
     "redis": "^4.5.1",
+    "sharp": "^0.32.5",
     "three": "^0.146.0",
     "web3": "^1.8.1"
   },
