--- a/system/package.json
+++ b/system/package.json
@@ -60,6 +60,7 @@
     "puppeteer": "^20.9.0",
     "redis": "^4.5.1",
     "sharp": "^0.32.5",
+    "stripe": "^13.3.0",
     "three": "^0.146.0",
     "web3": "^1.8.1"
   },
