--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "kill-port": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "qrcode-terminal": "^0.12.0",
-    "wrangler": "^2.18.0"
+    "qrcode-terminal": "^0.12.0"
   }
 }
