--- a/system/package.json
+++ b/system/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "My virtual computer system for loading and running pieces.",
   "source": "./public/index.html",
-  "type": "module",
   "scripts": {
     "dev": "netlify dev",
     "dev-debug": "netlify dev --debug",
     "upgrade": "ncu -u",
     "watch": "netlify watch",
     "test": "NODE_OPTIONS='--experimental-vm-modules --es-module-specifier-resolution=node' jest",
-    "codespaces-dev": "kill-port 888 08888 8080 8000 8111 3333; netlify dev",
+    "codespaces-dev": "kill-port 888 08888 8080 8000 8111 3333 3000 3001; netlify dev",
     "spaces-dev-netlify": "http-server public -p 8111 --cors -c-1 -i -s",
     "codespaces-dev-debug": "kill-port 8889 8888 8080 8000 8111 3333; netlify dev --debug",
     "codespaces-dev-public": "kill-port 8080 8888 8889 8000 8111 3333; netlify dev --live",
