--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -16,8 +16,8 @@
     "backend/**/*.mjs"
     ]
   external_node_modules = ["got", "mongodb"]
-[functions.print]
-  external_node_modules = ["got", "stripe"]
+# [functions.print]
+  # external_node_modules = ["got", "stripe"]
 [functions.pixel]
   external_node_modules = ["got", "sharp"]
 [functions.user]
