--- a/system/package.json
+++ b/system/package.json
@@ -53,6 +53,7 @@
     "idb": "^7.1.0",
     "jsonwebtoken": "^9.0.0",
     "jszip": "^3.10.1",
+    "keyv": "^4.5.3",
     "mongodb": "^5.7.0",
     "nanoid": "^4.0.0",
     "openai": "^3.2.1",
