--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -14,16 +14,16 @@
     "public/aesthetic.computer/lib/text.mjs",
     "backend/**/*.mjs"
     ]
-  external_node_modules = ["got", "mongodb", "keyv"]
-# [functions.print]
-  # external_node_modules = ["got", "stripe"]
+  external_node_modules = ["got", "mongodb"]
+[functions.print]
+  external_node_modules = ["got", "stripe"]
 [functions.pixel]
   external_node_modules = ["got", "sharp"]
 [functions.user]
   included_files = ["backend/**/*.mjs"]
-  external_node_modules = ["got", "mongodb", "keyv"]
+  external_node_modules = ["got", "mongodb"]
 [functions.presigned-url]
-  external_node_modules = ["got", "mongodb", "keyv", "nanoid", "@aws-sdk-client-s3", "@aws-sdk/s3-request-presigner"]
+  external_node_modules = ["got", "mongodb", "nanoid", "@aws-sdk-client-s3", "@aws-sdk/s3-request-presigner"]
   included_files = ["backend/**/*.mjs"]
 [functions.thumbnail]
   external_node_modules = ["puppeteer"]
