--- a/system/package.json
+++ b/system/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "My virtual computer system for loading and running pieces.",
   "source": "./public/index.html",
+  "type": "module",
   "scripts": {
     "dev": "netlify dev",
     "dev-debug": "netlify dev --debug",
@@ -71,7 +72,7 @@
     "http-server": "^14.1.1",
     "jest": "^29.1.2",
     "kill-port": "^2.0.1",
-    "netlify-cli": "^16.0.3",
+    "netlify-cli": "^16.2.0",
     "npm-check-updates": "^16.10.12",
     "parcel": "^2.7.0",
     "parcel-reporter-static-files-copy": "^1.4.0",
