--- a/system/package.json
+++ b/system/package.json
@@ -2,15 +2,13 @@
   "name": "system",
   "version": "1.0.0",
   "description": "My virtual computer system for loading and running pieces.",
-  "source": "./public/index.html",
-  "type": "module",
   "scripts": {
     "dev": "netlify dev",
     "dev-debug": "netlify dev --debug",
     "upgrade": "ncu -u",
     "watch": "netlify watch",
     "test": "NODE_OPTIONS='--experimental-vm-modules --es-module-specifier-resolution=node' jest",
-    "codespaces-dev": "kill-port 888 08888 8080 8000 8111 3333 3000 3001; netlify dev",
+    "codespaces-dev": "kill-port 8880 8888 8889 8080 8000 8111 3333 3000 3001; netlify dev",
     "spaces-dev-netlify": "http-server public -p 8111 --cors -c-1 -i -s",
     "codespaces-dev-debug": "kill-port 8889 8888 8080 8000 8111 3333; netlify dev --debug",
     "codespaces-dev-public": "kill-port 8080 8888 8889 8000 8111 3333; netlify dev --live",
@@ -36,51 +34,51 @@
   },
   "homepage": "https://github.com/whistlegraph/system#readme",
   "dependencies": {
-    "@ffmpeg/core": "^0.11.0",
-    "@ffmpeg/ffmpeg": "^0.11.5",
-    "@geckos.io/client": "^2.2.3",
+    "@ffmpeg/core": "^0.12.3",
+    "@ffmpeg/ffmpeg": "^0.12.6",
+    "@geckos.io/client": "^2.3.1",
     "@google-cloud/text-to-speech": "^5.0.0",
-    "@grpc/grpc-js": "^1.9.0",
+    "@grpc/grpc-js": "^1.9.2",
     "@mediapipe/hands": "^0.4.1675469240",
-    "@mediapipe/tasks-vision": "^0.10.0",
-    "@netlify/functions": "^1.6.0",
+    "@mediapipe/tasks-vision": "^0.10.4",
     "busboy": "^1.6.0",
     "crypto": "^1.0.1",
-    "express-oauth2-jwt-bearer": "^1.3.0",
+    "express-oauth2-jwt-bearer": "^1.5.0",
     "gl-matrix": "^3.4.3",
-    "got": "^12.5.3",
+    "got": "^13.0.0",
     "gotrue-js": "^0.9.29",
     "gpt3-tokenizer": "^1.1.5",
-    "idb": "^7.1.0",
-    "jsonwebtoken": "^9.0.0",
+    "idb": "^7.1.1",
+    "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "keyv": "^4.5.3",
-    "mongodb": "^5.7.0",
-    "nanoid": "^4.0.0",
-    "openai": "^3.2.1",
+    "mongodb": "^6.0.0",
+    "nanoid": "^4.0.2",
+    "openai": "^4.4.0",
     "patreon": "^0.4.1",
-    "puppeteer": "^20.9.0",
-    "redis": "^4.5.1",
+    "puppeteer": "^21.1.1",
+    "redis": "^4.6.8",
     "sharp": "^0.32.5",
-    "stripe": "^13.3.0",
-    "three": "^0.146.0",
-    "web3": "^1.8.1"
+    "stripe": "^13.4.0",
+    "three": "^0.156.0",
+    "web3": "^4.1.1"
   },
   "devDependencies": {
-    "@aws-sdk/client-s3": "^3.183.0",
-    "@aws-sdk/s3-request-presigner": "^3.183.0",
+    "@aws-sdk/client-s3": "^3.400.0",
+    "@aws-sdk/s3-request-presigner": "^3.400.0",
+    "@netlify/functions": "^2.0.2",
     "http-server": "^14.1.1",
-    "jest": "^29.1.2",
+    "jest": "^29.6.4",
     "kill-port": "^2.0.1",
     "netlify-cli": "^16.2.0",
-    "npm-check-updates": "^16.10.12",
-    "parcel": "^2.7.0",
-    "parcel-reporter-static-files-copy": "^1.4.0",
-    "playwright-core": "^1.26.1",
-    "prettier": "^2.7.1",
-    "rollup": "^3.15.0",
-    "terser": "^5.16.3",
-    "typescript": "^4.8.4",
+    "npm-check-updates": "^16.13.2",
+    "parcel": "^2.9.3",
+    "parcel-reporter-static-files-copy": "^1.5.2",
+    "playwright-core": "^1.37.1",
+    "prettier": "^3.0.3",
+    "rollup": "^3.28.1",
+    "terser": "^5.19.3",
+    "typescript": "^5.2.2",
     "uglify": "^0.1.5"
   }
 }
