--- a/system/package.json
+++ b/system/package.json
@@ -55,6 +55,7 @@
     "keyv": "^4.5.3",
     "mongodb": "^6.0.0",
     "nanoid": "^4.0.2",
+    "nodemailer": "^6.9.4",
     "openai": "^4.4.0",
     "patreon": "^0.4.1",
     "puppeteer": "^21.1.1",
