--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   publish = "public"
-  # command = "bash ./github-discord.sh"
-  command = "echo 'Building...'"
+  command = "bash ./github-discord.sh"
+  # command = "echo 'Building...'"
 [functions]
   node_bundler = "esbuild"
 [functions.index]
