add `email` command to change and resend email verifications

--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -191,6 +191,10 @@
   to = "/.netlify/functions/handle"
   status = 200
 [[redirects]]
+  from = "/api/email"
+  to = "/.netlify/functions/email"
+  status = 200
+[[redirects]]
   from = "/user"
   to = "/.netlify/functions/user"
   status = 200
