add cors resource policy

--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -61,6 +61,7 @@
     # Currently used by ffmpeg.wasm. 22.08.06.11.01
     Cross-Origin-Embedder-Policy = "require-corp"
     Cross-Origin-Opener-Policy = "same-origin"
+    Cross-Origin-Resource-Policy = "cross-origin"
 [[headers]]
   for = "/*.mjs|/*.js"
   [headers.values]
