--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -70,7 +70,7 @@
     Vary = "*"
 [[edge_functions]]
   path = "/new-media/*"
-  function = "media"
+  function = "new-media"
 [[redirects]]
    from = "https://botce.ac/wPyYL4osf6Cw0pkHn_E5I-botce"
    to = "https://aesthetic.computer/wPyYL4osf6Cw0pkHn_E5I-botce"
