--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,11 @@
   "search.useIgnoreFiles": true,
   "editor.minimap.scale": 1,
   "editor.minimap.autohide": true,
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  "deno.enable": true,
+  "deno.enablePaths": [
+    "system/netlify/edge-functions"
+  ],
+  "deno.unstable": true,
+  "deno.importMap": ".netlify/edge-functions-import-map.json"
 }
