--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -188,7 +188,12 @@
   status = 200
 [[redirects]]
   from = "/api/admin"
-  to = "/.netlify/functions/admin"
+  to = "/.netlify/functions/admin-background"
+  status = 200
+  force = false
+[[redirects]]
+  from = "/api/painting"
+  to = "/.netlify/functions/painting"
   status = 200
   force = false
 [[redirects]]
