--- a/system/package.json
+++ b/system/package.json
@@ -9,7 +9,8 @@
     "watch": "netlify watch",
     "test": "NODE_OPTIONS='--experimental-vm-modules --es-module-specifier-resolution=node' jest",
     "codespaces-dev": "kill-port 8880 8888 8889 8080 8000 8111 3333 3000 3001; netlify dev",
-    "stripe-dev": "stripe listen --forward-to https://localhost:8888/api/print",
+    "stripe-dev-print": "stripe listen --forward-to https://localhost:8888/api/print",
+    "stripe-dev": "stripe listen --forward-to https://localhost:8888/api/ticket/sotce",
     "spaces-dev-netlify": "http-server public -p 8111 --cors -c-1 -i -s",
     "codespaces-dev-debug": "kill-port 8889 8888 8080 8000 8111 3333; netlify dev --debug",
     "codespaces-dev-public": "kill-port 8080 8888 8889 8000 8111 3333; netlify dev --live",
