more progress with ticketing

--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -22,8 +22,8 @@
   external_node_modules = ["got", "stripe", "nodemailer"]
 [functions.pixel]
   external_node_modules = ["got", "sharp"]
-[functions.create-payment-intent]
-  external_node_modules = ["stripe"]
+[functions.ticket]
+  external_node_modules = ["stripe", "nanoid"]
 [functions.user]
   included_files = ["backend/**/*.mjs"]
   external_node_modules = ["got", "mongodb"]
