--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "qrcode-terminal": "^0.12.0"
+  },
+  "dependencies": {
+    "vercel": "^32.5.3"
   }
 }
