--- a/session-server/package.json
+++ b/session-server/package.json
@@ -17,6 +17,7 @@
   },
   "author": "Jeffrey Alan Scudder",
   "dependencies": {
+    "@geckos.io/server": "^2.3.2",
     "chokidar": "^3.5.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.19.2",
