--- a/session-server/package.json
+++ b/session-server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node session.mjs",
+    "start-do": "PORT=80 node session.mjs",
     "dev": "PORT=8889 NODE_ENV=development nodemon --watch session.mjs session.mjs",
     "create": "npx jamsocket service create session-server",
     "build": "echo Built 😄",
