--- a/session-server/Dockerfile
+++ b/session-server/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:lts-hydrogen
 WORKDIR /app
 COPY .env .
+COPY aesthetic-computer-firebase-adminsdk-79w8j-5b5cdfced8.json .
 COPY session.mjs .
 COPY package.json .
 COPY package-lock.json .
