--- a/session-server/package.json
+++ b/session-server/package.json
@@ -22,6 +22,7 @@
     "chokidar": "^3.5.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.19.2",
+    "firebase-admin": "^12.0.0",
     "ip": "^1.1.8",
     "jamsocket": "^0.7.2",
     "redis": "^4.6.7",
