--- a/system/package.json
+++ b/system/package.json
@@ -48,6 +48,7 @@
     "crypto": "^1.0.1",
     "discord-interactions": "^3.4.0",
     "express-oauth2-jwt-bearer": "^1.5.0",
+    "firebase-admin": "^12.0.0",
     "gl-matrix": "^3.4.3",
     "got": "^13.0.0",
     "gotrue-js": "^0.9.29",
