new mood secret location for `mood` notification support

--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -13,7 +13,7 @@
                     "public/aesthetic.computer/lib/**/*.mjs",
                     "backend/**/*.mjs"]
 [functions.mood]
-  external_node_modules = ["firebase-admin"]
+  external_node_modules = ["got", "firebase-admin"]
 [functions.handle]
   included_files = [
     "public/aesthetic.computer/lib/text.mjs",
