--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -150,6 +150,10 @@
   to = "/.netlify/builders/thumbnail"
   status = 200
 [[redirects]]
+  from = "/privacy-policy"
+  to = "/privacy-policy.html"
+  status = 200
+[[redirects]]
   from = "/icon/*"
   to = "/.netlify/builders/icon"
   status = 200
