--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -256,11 +256,11 @@
   status = 200
   force = true
 # Catch any unfound disk paths to the blank disk.
-[[redirects]]
-  from = "/aesthetic.computer/disks/*"
-  to = "/aesthetic.computer/disks/404.mjs"
-  status = 404
-  force = false
+# [[redirects]]
+#   from = "/aesthetic.computer/disks/*"
+#   to = "/aesthetic.computer/disks/404.mjs"
+#   status = 404
+#   force = false
 # Reroute any other unfound file to the index.
 # TODO: This should be a 404...
 [[redirects]]
