--- a/apple/aesthetic.computer/aesthetic.computer-release.entitlements
+++ b/apple/aesthetic.computer/aesthetic.computer-release.entitlements
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   Property List.plist
-   aesthetic.computer
-
-   Created by Rumi Tarighian on 12/4/23.
-   Copyright (c) 2023 ___ORGANIZATIONNAME___. All rights reserved.
--->
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>aps-environment</key>
+	<string>production</string>
+</dict>
 </plist>
