support url and `support` prompt shortcut (ios rc)

--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -152,6 +152,10 @@
   to = "/.netlify/builders/thumbnail"
   status = 200
 [[redirects]]
+  from = "/support"
+  to = "/support.html"
+  status = 200
+[[redirects]]
   from = "/privacy-policy"
   to = "/privacy-policy.html"
   status = 200
