abstract `field` into `world` to prep for other areas

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ext": "cd vscode-extension; npm run reload;",
     "ext:publish": "cd vscode-extension; npm run publish;",
     "code": "cd system; npm run codespaces-dev",
-    "stripe": "cd system; npm run stripe-dev",
+    "stripe": "cd system; npm run stripe-dev-sotce",
     "edge": "vercel dev",
     "edge.old": "concurrently --raw \"vercel dev\" \"http-server edge-stream -p 9000 --cors -c-1 -i --P http://localhost:3000 -S --cert ssl-dev/localhost.pem --key ssl-dev/localhost-key.pem\"",
     "code:debug": "cd system; npm run codespaces-dev-debug",
@@ -22,6 +22,9 @@
     "server:socket": "cd socket-server; npm run server",
     "assets:sync:down": "aws s3 sync s3://assets-aesthetic-computer system/public/assets --endpoint-url https://sfo3.digitaloceanspaces.com",
     "assets:sync:up": "aws s3 sync system/public/assets s3://assets-aesthetic-computer --endpoint-url https://sfo3.digitaloceanspaces.com --exclude '*.DS_Store' --acl public-read",
+    "session:reset": "f() { cd session-server; npx jamsocket backend terminate $1 };f",
+    "session:alive": "cd session-server; npx jamsocket backend list",
+    "session:publish": "cd session-server; npm run build; npm run deploy",
     "server:session": "cd session-server; npm run dev",
     "server:session:build": "cd session-server; npm run build:jamsocket",
     "server:session:deploy": "cd session-server; npm run deploy",
