--- a/session-server/package.json
+++ b/session-server/package.json
@@ -24,7 +24,8 @@
     "fastify": "^4.19.2",
     "firebase-admin": "^12.0.0",
     "ip": "^1.1.8",
-    "jamsocket": "^0.7.3",
+    "jamsocket": "^0.7.4",
+    "obscenity": "^0.1.4",
     "redis": "^4.6.7",
     "ws": "^8.13.0"
   },
