--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -15,7 +15,7 @@
 [functions.delete-erase-and-forget-me]
   external_node_modules = ["@aws-sdk-client-s3"]
 [functions.mood]
-  external_node_modules = ["got", "firebase-admin"]
+  external_node_modules = ["got", "firebase-admin", "obscenity"]
 [functions.handle]
   included_files = [
     "public/aesthetic.computer/lib/text.mjs",
