--- a/system/package.json
+++ b/system/package.json
@@ -60,6 +60,7 @@
     "mongodb": "^6.1.0",
     "nanoid": "^4.0.2",
     "nodemailer": "^6.9.4",
+    "obscenity": "^0.1.4",
     "openai": "^4.4.0",
     "patreon": "^0.4.1",
     "playwright-core": "^1.38.1",
