--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The header package for the whole aesthetic.computer codebase.",
   "type": "module",
   "scripts": {
+    "micro": "cd micro/machine; ./boot",
     "upgrade": "ncu -u",
     "url": "node generate-local-url.js",
     "ac": "npm run aesthetic",
