--- a/package.json
+++ b/package.json
@@ -57,9 +57,7 @@
     "npm-check-updates": "^16.13.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
-    "qrcode-terminal": "^0.12.0"
-  },
-  "dependencies": {
-    "vercel": "^32.5.6"
+    "qrcode-terminal": "^0.12.0",
+    "vercel": "^33.0.1"
   }
 }
