--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -10,9 +10,10 @@
     "vscode": "^1.74.2"
   },
   "scripts": {
-    "reload": "npm run build; npm run install:ext;",
+    "reload": "npm run build; npm run uninstall:ext; npm run install:ext;",
     "build": "vsce package",
-    "install:ext": "code --install-extension aesthetic-computer-code-1.8.0.vsix",
+    "uninstall:ext": "code --uninstall-extension aesthetic-computer.aesthetic-computer-code",
+    "install:ext": "code --install-extension `ls -v *.vsix | tail -n 1`",
     "publish": "vsce publish minor",
     "login": "vsce login",
     "token": "echo \"Get token from: https://dev.azure.com/aesthetic-computer/_usersSettings/tokens\""
