--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -36,7 +36,7 @@
       "activitybar": [
         {
           "id": "piece",
-          "title": "aesthetic.computer",
+          "title": "aesthetic computer",
           "icon": "resources/aesthetic-computer.svg"
         }
       ]
@@ -46,7 +46,7 @@
         {
           "type": "webview",
           "id": "aestheticComputer.sidebarView",
-          "name": "Piece"
+          "name": ""
         }
       ]
     }
